# QtTaskExample

./: CMakeLists.txt
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/lib/: common.h  delegate.cpp  delegate_p.h  itemmodel.cpp
src/lib/include/: delegate.h  itemmodel.h
tests/: CMakeLists.txt  testitemmodel.cpp  testitemmodel.h
